--- a/Cross Validation/K Fold Cross Validation.ipynb
+++ b/Cross Validation/K Fold Cross Validation.ipynb
@@ -99,23 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "22a97348-4560-4c32-ae27-74cb8411bf99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.92777778, 0.90555556, 0.95543175, 0.96657382, 0.91643454])"
+       "array([0.96666667, 0.96666667, 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(RandomForestClassifier(n_estimators=40),irists.data,digits.target)"
+    "cross_val_score(RandomForestClassifier(n_estimators=40),iris.data,iris.target)"
    ]
   },
   {
